force-app/main/default/objects/Compliance__c/Compliance__c.object-meta.xml
<CustomObject>
    <label>Compliance</label>
    <nameField>
        <label>Compliance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Compliances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>