force-app/main/default/objects/Compliance__c/fields/Business_regulation__c.field-meta.xml
<CustomField>
    <fullName>Business_regulation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the org abides by business regulation?</description>
    <label>Business regulation</label>
    <type>Checkbox</type>
</CustomField>