force-app/main/default/objects/Compliance__c/fields/Date_of_contract__c.field-meta.xml
<CustomField>
    <fullName>Date_of_contract__c</fullName>
    <label>Date of contract</label>
    <required>true</required>
    <type>Date</type>
</CustomField>