force-app/main/default/objects/Compliance__c/fields/Entities_policy__c.field-meta.xml
<CustomField>
    <fullName>Entities_policy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the org abides by entities policy ?</description>
    <label>Entities policy</label>
    <type>Checkbox</type>
</CustomField>