force-app/main/default/objects/Compliance__c/fields/External_Compliance_Audit__c.field-meta.xml
<CustomField>
    <fullName>External_Compliance_Audit__c</fullName>
    <label>External Compliance Audit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audit Satisfactory</fullName>
            </value>
            <value>
                <fullName>Nonconformances found</fullName>
            </value>
            <value>
                <fullName>Observation made</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>