force-app/main/default/objects/Compliance__c/fields/External_Compliance_Audit_Completed__c.field-meta.xml
<CustomField>
    <fullName>External_Compliance_Audit_Completed__c</fullName>
    <label>External Compliance Audit Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>