force-app/main/default/objects/Compliance__c/fields/Internal_Compliance_Audit_Completed__c.field-meta.xml
<CustomField>
    <fullName>Internal_Compliance_Audit_Completed__c</fullName>
    <description>Please select yes when internal compliance audit is completed</description>
    <label>Internal Compliance Audit Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>