force-app/main/default/objects/Compliance__c/fields/Internal_Compliance_Audit_Status__c.field-meta.xml
<CustomField>
    <fullName>Internal_Compliance_Audit_Status__c</fullName>
    <label>Internal Compliance Audit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audit Satisfactory</fullName>
            </value>
            <value>
                <fullName>Nonconformances found</fullName>
            </value>
            <value>
                <fullName>Observation made</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>