force-app/main/default/objects/Compliance__c/fields/Know_your_Customer_KYC__c.field-meta.xml
<CustomField>
    <fullName>Know_your_Customer_KYC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether Know your Customer(KYC) was done ?</description>
    <label>Know your Customer(KYC)</label>
    <type>Checkbox</type>
</CustomField>