force-app/main/default/objects/Compliance__c/fields/Local_law_Regulation__c.field-meta.xml
<CustomField>
    <fullName>Local_law_Regulation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the org abides by local law and regulation?</description>
    <label>Local law &amp; Regulation</label>
    <type>Checkbox</type>
</CustomField>