force-app/main/default/objects/Compliance__c/fields/Stock_Exchange_listed__c.field-meta.xml
<CustomField>
    <fullName>Stock_Exchange_listed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the org is listed in stock exchange</description>
    <label>Stock Exchange listed</label>
    <type>Checkbox</type>
</CustomField>